--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,7 @@
+---
 name: terraform fmt check
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     paths:
       - ".github/workflows/terraform.yml"
