--- a/.github/actions/terraform-apply/action.yml
+++ b/.github/actions/terraform-apply/action.yml
@@ -1,17 +1,13 @@
 ---
 name: terraform apply
 
-inputs:
-  working-directory:
-    required: true
-
 runs:
   using: "composite"
   steps:
     - name: Terraform Init
-      run: terraform -chdir=${{ inputs.working-directory }} init
+      run: terraform init
       shell: bash
 
     - name: Terraform Apply
-      run: terraform -chdir=${{ inputs.working-directory }} apply -auto-approve
+      run: terraform apply -auto-approve
       shell: bash
