--- a/.github/workflows/create-and-destroy-cluster.yml
+++ b/.github/workflows/create-and-destroy-cluster.yml
@@ -59,21 +59,19 @@ jobs:
       - name: Make sure we have destroyed any leftover resources
         uses: ./.github/actions/terraform-destroy
 
-      - name: Apply eks terraform
-        uses: ./.github/actions/terraform-apply
+      # - name: Apply eks terraform
+      #   uses: ./.github/actions/terraform-apply
 
       - name: Install Kubescape
         run: |
           curl -s https://raw.githubusercontent.com/kubescape/kubescape/master/install.sh | /bin/bash
-          export PATH=$PATH:/home/runner/.kubescape/bin
-
 
       - name: Run Kubescape
         run: |
-          kubescape scan --enable-host-scan --verbose
+          /home/runner/.kubescape/bin scan --enable-host-scan --verbose
           # if this doesn't work, aws eks update-kubeconfig --name <cluster_name>
           # if that doesn't work, kubescape scan --kubeconfig <kubeconfig_location>
 
-      - name: Destroy eks terraform
-        if: always()
-        uses: ./.github/actions/terraform-destroy
+      # - name: Destroy eks terraform
+      #   if: always()
+      #   uses: ./.github/actions/terraform-destroy
